fixed header alignment

--- a/src/app/animated-square/animated-square.component.scss
+++ b/src/app/animated-square/animated-square.component.scss
@@ -1,8 +1,9 @@
 .title {
   display: flex;
-  justify-content: center;
+  justify-content: start;
   font-weight: 500;
-  margin: 24px;
+  margin: 20px;
+  margin-left: 10px;
 }
 
   
